// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scaffold of a node at root 1`] = `
<div
  className="mui-line-block mui-line-half-horizontal-right"
/>
`;

exports[`Scaffold of a node with a parent 1`] = `
Array [
  <div
    className="mui-line-block"
  />,
  <div
    className="mui-line-block mui-line-half-horizontal-right mui-line-half-vertical-top"
  />,
]
`;

exports[`Scaffold of a node with a parent and child 1`] = `
Array [
  <div
    className="mui-line-block"
  />,
  <div
    className="mui-line-block mui-line-half-horizontal-right mui-line-half-vertical-top"
  />,
]
`;

exports[`Scaffold of a node with a parent and sibling 1`] = `
Array [
  <div
    className="mui-line-block"
  />,
  <div
    className="mui-line-block mui-line-half-horizontal-right mui-line-full-vertical"
  />,
]
`;
